# ChangeLog for media-plugins/grilo-plugins
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.9 2012/09/16 02:50:33 tetromino Exp $

*grilo-plugins-0.2.0 (16 Sep 2012)
*grilo-plugins-0.1.20 (16 Sep 2012)

  16 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -grilo-plugins-0.1.17-r2.ebuild,
  -files/grilo-plugins-0.1.17-apple-trailers-fix.patch,
  -files/grilo-plugins-0.1.17-tracker-0.12.patch,
  -files/grilo-plugins-0.1.17-upnp-filter-containers.patch,
  grilo-plugins-0.1.18.ebuild, +grilo-plugins-0.1.20.ebuild,
  +grilo-plugins-0.2.0.ebuild:
  Version bump with optical media support and lots of bugfixes; slot to allow
  parallel installation of 0.2.x and 0.1.x; disable USE=debug (it only adds
  debugging CFLAGS). Drop old.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org>
  grilo-plugins-0.1.17-r2.ebuild, grilo-plugins-0.1.18.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*grilo-plugins-0.1.18 (16 Mar 2012)

  16 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -grilo-plugins-0.1.16.ebuild,
  -files/grilo-plugins-0.1.16-local-metadata-leak.patch,
  -files/grilo-plugins-0.1.16-youtube-c90.patch,
  -files/grilo-plugins-0.1.16-youtube-libgdata-0.9.patch,
  -files/grilo-plugins-0.1.16-youtube-missing-case.patch,
  -files/grilo-plugins-0.1.16-youtube-variable-shadowing.patch,
  -grilo-plugins-0.1.17.ebuild, -grilo-plugins-0.1.17-r1.ebuild,
  +grilo-plugins-0.1.18.ebuild, +files/grilo-plugins-0.1.18-tracker-0.14.patch:
  Version bump with some bugfixes. Add patch for tracker-0.14 support. Drop
  old.

*grilo-plugins-0.1.17-r2 (07 Nov 2011)

  07 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +grilo-plugins-0.1.17-r2.ebuild,
  +files/grilo-plugins-0.1.17-tracker-0.12.patch,
  +files/grilo-plugins-0.1.17-upnp-filter-containers.patch, metadata.xml: