@@ -5,19 +5,15 @@ AUX grilo-plugins-0.1.18-tracker-0.14.patch 1366 SHA256 039dd863d4e36c9d778c8272
 DIST grilo-plugins-0.1.18.tar.xz 376696 SHA256 7e382f402119f4f270380627a2f49b30a6c43a47ecd645bf5ffe4e0cd99a1c79 SHA512 6dfe50fcc0145c807b3ea6743e4fe25452cc178d07e49058ae7ed5e4dd87673fbeb5a5cb1fe5d682df5cace47dff585666f3ff20bc1d2a8eee9c18fcb5024aca WHIRLPOOL e5eb40729ad4575ac10fc919ca8b79e3cdb84b5089684243878700b94f822d5f5d57435999e5b51455c87bc7be8eb529bc97d9ab741b951b36cbdfad24061deb
 DIST grilo-plugins-0.1.20.tar.xz 384188 SHA256 4b0bf0f502f7a21827e1de4b60e70376d49524c3859a69ebff28d829ab8ae5b5 SHA512 6a7784a67725d694dd909766581b88549c39cea6a70127f04fc95ac9fb054ee4580d4e8712eb7dfe9ec4b4b6549efa88a8aa669ae69e92866141e0d83af5c06c WHIRLPOOL e5f6e8a97668ee83fb4126546a10034f6550b6a967706130a81331adb7315e49ed1d0dc4dbb7bd0543147817dbe87af811020dddd4a4f189c415aac980925f9b
 DIST grilo-plugins-0.2.0.tar.xz 384380 SHA256 86ecabe5b34a15e9c00285b599461e7eb590e2fff0a8b284157b789b192db4f7 SHA512 90048f0c996f3d75babbdbd2f06206c7fb7ba1b008276aaa6c7cb72c95956892a1f4a9c536b9c3c50514d0a6e7d2b5ea291b4a7b1daecc827a9cf6a1571cb6b8 WHIRLPOOL 5feafd966132a7ae8acfbec7f9ea94b4b97ccb777016f4ad0db15d45002e275a85156e4ed9b30af27a5908677e35f0f2f9f423158e63849462fd0b0251d93b1c
-EBUILD grilo-plugins-0.1.18.ebuild 1887 SHA256 f4ebeab8cd1e82e235c39314b505e0a856c7459b74f4d74eae0617c9d3366f98 SHA512 126740b7c0f4fb85947d351fdad4c878283f6b8c13d017b67c6e0f1637d683dd983d2977235d99feb37b83f1cdf7b20eef51ea7db1d9aa2beca162f83c3bb541 WHIRLPOOL aebb704e7a2a8a580d9b615b6361620367c7815382d4f06a86f2cf078d6f0123334cdcea8e5da4aeaa648ff53742a325e15923a49d7d481674cec1acb272e84e
+EBUILD grilo-plugins-0.1.18.ebuild 1831 SHA256 ec620a671b17facd3410d2004865d8857b3d5c27da459baa116592a36e033d87 SHA512 96260314c785376e5bf6cb55181228f1cd9e01272dd6e312f8915c8f252d5678dc18b89a42a4fb2cbaa986588e9145343a70b0ac26f3e33cfbed96c9f5e7c1ec WHIRLPOOL 656e2efd4b26d0bd53de95fb49573d72f92bfc8092ffaf63116cf97b8fdf0ebc6c562b7dfae006e5d6dc462eb6196d19062e00e2b1b76495cf6a98d571157bd9
 EBUILD grilo-plugins-0.1.20.ebuild 1820 SHA256 ab0c533901c9cf5ff3f2f359bfc4640b9936859cdbddae0026430ec22a2e57ac SHA512 0f526ed557e71983e0acfbdf487649a0fb72f741ece81c3a55ce1c2bf4853c01c5093fa1632f020fd6206d0ae7b4fcb0fda9f097cf3268b2d81ec7277dce4451 WHIRLPOOL fd05ec73d448e55aabecf1fc3593577f2d290422053fbee68bea5f1adc59cce6a991dbd055141bba1dfd1fc7405e8f6cabaacc36b9837928be731e99de7697c8
 EBUILD grilo-plugins-0.2.0.ebuild 1888 SHA256 bf66c330ff2db0e8f4082c33e02592f0c9834d48d01f899c9c213c8330d404bf SHA512 59c4a585ffad079ed862676415293676dac51dfaf91c9764f0b0c034c8577595140026c038ca02fb35f6cd23979a6612058dc2224118cc34ab714bf05bee6827 WHIRLPOOL d68715e2c189cbcdb7be0d20a6ea77acfb02a43fc568a9958a0813a644fa5532aacb9eee95254c1ef6bbeb87008a0b9a18fb3482f7ced615526ae9da5888cb09
-MISC ChangeLog 3377 SHA256 89d3c4ce6f39f508b45f26aeb6ca1b62ad4a825e1868c642d6d0f653b3ff19d4 SHA512 04d43c580eab40592913e140d9eabd3be68a4320e24d77d91e6969cc0846325105b32740db1263039e8b459fcac477d27a15cd983d438709553c9b9f5ba75db7 WHIRLPOOL f644ef5b954c01f855b8e04cf647e3d6c4f6de7adaf67a069f2f84286838193eb13f0c262a914a1613334744a98770d51e9c5d1a34479a3ac6e072bd98d7da7c
+MISC ChangeLog 3541 SHA256 512b72ce6d05f8ab53dc56dd21730ef70601868259a7991f41df8161f75ebb66 SHA512 baef83dc8e867e63c910c0c63691a03f237904126d93a0e10e7b80bdaac55f049977a16a4c44f71f6befc498c63d328032dec14f6e3a0aeb1a0d75a7c5835d11 WHIRLPOOL 62f366523bd63b6abcaad87b827e97335012fa85f41ffe241cdf0c6f78607fff5fa62f36085939ff77ee12de3d90725710bf3f79b882d51a48f9ca67b0d8e903
 MISC metadata.xml 597 SHA256 08381bc5aff817c6df37d929646c19b3d5a4ed51a832bbc7d088a5bdd58ba653 SHA512 edc0956aa798eb6cfb8ff58d6cff76b4dc6ce6428e43c2301c5b3b4c4626be0b1e11fd9f25f9ef2aa306ddc4d954e2392b79aa924e03c4253a688af4ffc57c74 WHIRLPOOL f489bc99e8503c62526910a3e1c7c2a36345503d4d15db05dbf247ded2e3aa11424abc5dbbae49f0c1a53c9312c798c321a649bf44779644b008e5c5c8b8f1fc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQVT5/AAoJEJ0WA1zPCt1hl9EH/RObLxt3j+ilPYKF//jpFMIC
-2gaq+Spij6sDodSouFUCD5bde1/Ay/Vu2Fwa/RkWfiKULKbcxslvvYUmhl+EIqvX
-pKleVWEUkDDUV+9JXfdY0lfgkcVpQVO/X5CLfJn4nSz0nT0+P32n7QzgUpGk4KTP
-2dO19CZE5A0Epux5yFgL6LDsVCbRGzpl8OImhgca6izANuOZL0VAtvnnks0nXPUz
-2gsuXRwVD1dpCN2M8gwbsJcuyTxfYQXRrpslFHp3n6NSXs5MkLAFLrtM2+zp51w6
-Br9+2+EgJvHNL3VAILif6NkWVUqzDnwizO/l/JoM8q8/fAmDmORO8vxpzyKyNhw=
-=XVhZ
+iEYEAREIAAYFAlBnKnIACgkQCaWpQKGI+9Tb6gCdEE7mv80KPOgj1Q2RzHm9tpgD
+XbEAn0rI6EtXgMyE4u3BPFucsJSgALKu
+=YNzy
 -----END PGP SIGNATURE-----
