@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/grilo-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.9 2012/09/16 02:50:33 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.10 2012/09/29 17:05:49 pacho Exp $
+
+  29 Sep 2012; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.1.18.ebuild:
+  Drop tracker support for version to stabilize as tracker is still not ready
+  for stable.
 
 *grilo-plugins-0.2.0 (16 Sep 2012)
 *grilo-plugins-0.1.20 (16 Sep 2012)
@@ -78,4 +82,3 @@
   02 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
   +grilo-plugins-0.1.15.ebuild, +metadata.xml:
   Add new ebuild for grilo plugins
-
